feat:优化启动文件类型选择

--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -229,7 +229,8 @@
     "java_env": "Java-Umgebung",
     "java_scan": "Alle Laufwerke nach Java-Installationen durchsuchen",
     "java_manual": "Java-Pfad manuell auswählen",
-    "java_path": "Java-Pfad"
+    "java_path": "Java-Pfad",
+    "file_hint": "Nach dem Klicken auf 「Auswählen und Erstellen」 wählen Sie bitte die Server-Startdatei (unterstützt .jar, .bat oder .sh Formate). Das System erkennt den Dateityp automatisch"
   },
   "console": {
     "title": "Konsole",
