--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -230,7 +230,8 @@
     "java_env": "Java Environment",
     "java_scan": "Scan all disks for Java installations",
     "java_manual": "Manually select Java path",
-    "java_path": "Java Path"
+    "java_path": "Java Path",
+    "file_hint": "After clicking 「Select and Create」, please choose the server startup file (supports .jar, .bat, or .sh formats). The system will automatically detect the file type"
   },
   "console": {
     "title": "Console",
