--- a/src/language/ru-RU.json
+++ b/src/language/ru-RU.json
@@ -229,7 +229,8 @@
     "java_env": "Окружение Java",
     "java_scan": "Сканировать все диски на наличие Java",
     "java_manual": "Указать путь вручную",
-    "java_path": "Путь к Java"
+    "java_path": "Путь к Java",
+    "file_hint": "После нажатия 「Выбрать и Создать」 выберите файл запуска сервера (поддерживаются форматы .jar, .bat или .sh). Система автоматически определит тип файла"
   },
   "console": {
     "title": "Консоль",
