--- a/src/language/vi-VN.json
+++ b/src/language/vi-VN.json
@@ -229,7 +229,8 @@
     "java_env": "Môi trường Java",
     "java_scan": "Quét tất cả ổ đĩa trong hệ thống để tìm Java",
     "java_manual": "Chọn đường dẫn Java thủ công",
-    "java_path": "Đường dẫn Java"
+    "java_path": "Đường dẫn Java",
+    "file_hint": "Sau khi nhấn 「Chọn và Tạo」, vui lòng chọn file khởi động máy chủ (hỗ trợ .jar, .bat hoặc .sh), hệ thống sẽ tự động nhận diện loại file"
   },
   "console": {
     "title": "Bảng điều khiển",
