refactor: 重构创建服务器流程与服务端类型解析

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -231,7 +231,41 @@
     "java_scan": "Scan all disks for Java installations",
     "java_manual": "Manually select Java path",
     "java_path": "Java Path",
-    "file_hint": "After clicking 「Select and Create」, please choose the server startup file (supports .jar, .bat, or .sh formats). The system will automatically detect the file type"
+    "file_hint": "After clicking 「Select and Create」, please choose the server startup file (supports .jar, .bat, or .sh formats). The system will automatically detect the file type",
+    "step_source_title": "Step 1: Select Source",
+    "step_source_desc": "Archive or server folder",
+    "step_source_panel_desc": "Drag a modpack archive or server folder into the receiver, or click to choose.",
+    "step_placeholder_title": "Step 2: Reserved",
+    "step_placeholder_desc": "This step is currently empty",
+    "step_placeholder_panel_desc": "No action is required in this step for now. It is treated as completed.",
+    "step_placeholder_done": "This step is currently a placeholder and is automatically completed.",
+    "step_java_title": "Step 2: Java Environment",
+    "step_java_desc": "Select and confirm Java path",
+    "step_startup_title": "Step 3: Startup Settings",
+    "step_startup_desc": "Name, Java, memory and port",
+    "step_startup_panel_desc": "Configure server name, Java path, and startup settings.",
+    "step_config_title": "Step 3: Server Settings",
+    "step_config_desc": "Name, memory, port and online mode",
+    "step_action_title": "Step 4: Execute",
+    "step_action_desc": "Create new or import existing",
+    "step_action_panel_desc": "Confirm settings and run create or import.",
+    "source_drop_or_click": "Drop an archive or folder here, or click to choose",
+    "source_accept_hint": "Supports .zip/.tar/.tar.gz/.tgz archives, or a server folder",
+    "source_selected_title": "Source Selected",
+    "source_kind_archive": "Archive",
+    "source_kind_folder": "Folder",
+    "source_not_selected": "Not selected",
+    "source_clear": "Clear",
+    "source_choose_title": "Select Server Source",
+    "source_choose_description": "Choose a modpack archive file or an existing server folder.",
+    "source_pick_archive": "Choose Archive",
+    "source_pick_folder": "Choose Folder",
+    "source_drop_unavailable": "Cannot read dropped item path. Please click the receiver to select manually.",
+    "source_required": "Please select a modpack archive or server folder first",
+    "import_requires_folder": "Select and Import only supports a server folder. Please choose a folder source.",
+    "source_detecting_core": "Parsing server core type...",
+    "source_core_label": "Server core type: ",
+    "source_core_unknown": "Unknown"
   },
   "console": {
     "title": "Console",
