--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -227,7 +227,41 @@
     "java_scan": "扫描系统中所有磁盘的 Java 安装",
     "java_manual": "手动选择 Java 路径",
     "java_path": "Java 路径",
-    "file_hint": "点击「选择并创建」按钮后，请选择服务器启动文件（支持 .jar、.bat 或 .sh 格式），系统将自动识别文件类型"
+    "file_hint": "点击「选择并创建」按钮后，请选择服务器启动文件（支持 .jar、.bat 或 .sh 格式），系统将自动识别文件类型",
+    "step_source_title": "步骤 1：选择来源",
+    "step_source_desc": "压缩包或服务器文件夹",
+    "step_source_panel_desc": "将整合包压缩文件或服务器文件夹拖入接收区，也可以点击后选择。",
+    "step_placeholder_title": "步骤 2：预留",
+    "step_placeholder_desc": "此步骤暂时为空",
+    "step_placeholder_panel_desc": "该步骤暂不需要操作，默认视为完成。",
+    "step_placeholder_done": "该步骤当前为占位状态，已自动完成。",
+    "step_java_title": "步骤 2：Java 环境",
+    "step_java_desc": "选择并确认 Java 路径",
+    "step_startup_title": "步骤 3：启动参数",
+    "step_startup_desc": "名称、Java、内存与端口",
+    "step_startup_panel_desc": "配置服务器名称、Java 路径与启动参数。",
+    "step_config_title": "步骤 3：服务器参数",
+    "step_config_desc": "名称、内存、端口与正版验证",
+    "step_action_title": "步骤 4：执行创建",
+    "step_action_desc": "创建新服或导入现有",
+    "step_action_panel_desc": "确认参数后执行创建或导入。",
+    "source_drop_or_click": "拖拽压缩包或文件夹到这里，或点击选择",
+    "source_accept_hint": "支持 .zip/.tar/.tar.gz/.tgz 压缩包，或服务器文件夹",
+    "source_selected_title": "已选择来源",
+    "source_kind_archive": "压缩包",
+    "source_kind_folder": "文件夹",
+    "source_not_selected": "未选择",
+    "source_clear": "清除",
+    "source_choose_title": "选择服务器来源",
+    "source_choose_description": "请选择导入整合包压缩文件，或选择现有服务器文件夹。",
+    "source_pick_archive": "选择压缩包",
+    "source_pick_folder": "选择文件夹",
+    "source_drop_unavailable": "无法读取拖入项路径，请点击接收区手动选择",
+    "source_required": "请先选择整合包压缩文件或服务器文件夹",
+    "import_requires_folder": "选择并导入仅支持服务器文件夹，请重新选择来源",
+    "source_detecting_core": "正在解析服务端类型...",
+    "source_core_label": "服务端类型：",
+    "source_core_unknown": "未知"
   },
   "console": {
     "title": "控制台",
