refactor: 拆分创建服务器页面并落地新建服步骤

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -265,7 +265,45 @@
     "import_requires_folder": "Select and Import only supports a server folder. Please choose a folder source.",
     "source_detecting_core": "Parsing server core type...",
     "source_core_label": "Server core type: ",
-    "source_core_unknown": "Unknown"
+    "source_core_unknown": "Unknown",
+    "step_path_title": "Step 2: Server Path",
+    "step_path_desc": "Set run directory (required for archives)",
+    "path_label": "Server Path",
+    "path_required_archive": "Archive source requires a target server path.",
+    "path_optional_folder": "Folder source can run in place or use a new target path.",
+    "path_archive_placeholder": "Choose the target path for archive import",
+    "path_folder_placeholder": "Leave empty to run in place",
+    "path_use_in_place": "Run In Place",
+    "path_use_source": "Use Source Path",
+    "path_effective_label": "Effective server path:",
+    "path_required_folder_target": "Cannot resolve target server path for folder source",
+    "startup_title": "Startup Selection",
+    "startup_hint": "Recommended: starter > bat/sh/ps1 > server.jar",
+    "startup_scanning": "Scanning startup candidates...",
+    "startup_empty": "No startup candidate found. You can use a custom command.",
+    "startup_required": "Please select a startup candidate",
+    "startup_candidate_starter": "Starter (Recommended)",
+    "startup_candidate_server_jar": "server.jar",
+    "startup_candidate_custom": "Custom Command",
+    "startup_candidate_custom_desc": "Manually enter full startup command",
+    "startup_mode_starter": "Starter",
+    "startup_mode_jar": "JAR",
+    "startup_mode_script": "Script",
+    "startup_mode_custom": "Custom",
+    "startup_recommended_high": "Priority: High",
+    "startup_recommended_medium": "Priority: Medium",
+    "startup_recommended_low": "Priority: Low",
+    "startup_custom_label": "Custom Startup Command",
+    "startup_custom_placeholder": "Example: java @userargs.txt -jar server.jar nogui",
+    "startup_custom_hint": "Enter the full command and do not use I/O redirection.",
+    "startup_custom_required": "Please enter a custom startup command",
+    "startup_custom_redirect_forbidden": "Redirection and pipe operators are not allowed in custom command",
+    "startup_custom_not_supported": "Current version validates and stores only; custom command execution is not enabled.",
+    "create_config_only": "Create Configuration Only",
+    "copy_conflict_title": "File Conflicts Detected",
+    "copy_conflict_description": "Files with the same name already exist in target path. Continue to overwrite.",
+    "copy_conflict_more": "And {count} more conflict items",
+    "copy_conflict_confirm": "Continue Overwrite"
   },
   "console": {
     "title": "Console",
