--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -261,7 +261,45 @@
     "import_requires_folder": "选择并导入仅支持服务器文件夹，请重新选择来源",
     "source_detecting_core": "正在解析服务端类型...",
     "source_core_label": "服务端类型：",
-    "source_core_unknown": "未知"
+    "source_core_unknown": "未知",
+    "step_path_title": "步骤 2：开服路径",
+    "step_path_desc": "设置开服目录（压缩包必填）",
+    "path_label": "开服路径",
+    "path_required_archive": "压缩包来源必须指定开服路径。",
+    "path_optional_folder": "文件夹来源可原地开服，也可指定新路径。",
+    "path_archive_placeholder": "请选择压缩包的开服目录",
+    "path_folder_placeholder": "留空表示原地开服",
+    "path_use_in_place": "原地开服",
+    "path_use_source": "使用源路径",
+    "path_effective_label": "实际开服目录：",
+    "path_required_folder_target": "无法确定文件夹开服目录，请重新选择路径",
+    "startup_title": "启动项选择",
+    "startup_hint": "推荐顺序：starter > bat/sh/ps1 > server.jar",
+    "startup_scanning": "正在扫描启动项...",
+    "startup_empty": "未扫描到可用启动项，可使用自定义命令",
+    "startup_required": "请选择启动项",
+    "startup_candidate_starter": "Starter（推荐）",
+    "startup_candidate_server_jar": "server.jar",
+    "startup_candidate_custom": "自定义命令",
+    "startup_candidate_custom_desc": "手动输入完整启动命令",
+    "startup_mode_starter": "Starter",
+    "startup_mode_jar": "JAR",
+    "startup_mode_script": "脚本",
+    "startup_mode_custom": "自定义",
+    "startup_recommended_high": "推荐级：高",
+    "startup_recommended_medium": "推荐级：中",
+    "startup_recommended_low": "推荐级：低",
+    "startup_custom_label": "自定义启动命令",
+    "startup_custom_placeholder": "例如：java @userargs.txt -jar server.jar nogui",
+    "startup_custom_hint": "请输入完整命令，且不要重定向输入输出。",
+    "startup_custom_required": "请输入自定义启动命令",
+    "startup_custom_redirect_forbidden": "自定义命令禁止使用重定向或管道符",
+    "startup_custom_not_supported": "当前版本仅校验并保存，不会执行自定义命令。",
+    "create_config_only": "仅创建服务器配置",
+    "copy_conflict_title": "检测到文件冲突",
+    "copy_conflict_description": "目标目录存在同名文件，继续将覆盖这些文件。",
+    "copy_conflict_more": "另有 {count} 个冲突项未展示",
+    "copy_conflict_confirm": "继续覆盖"
   },
   "console": {
     "title": "控制台",
