feat(create): 下沉启动项扫描并拆分创建步骤
在 Tauri 新增启动候选扫描与目录冲突/复制命令
前端改为调用后端扫描，统一启动项排序并保留自定义命令
创建向导新增第 5 步提交页，调整中英文文案与按钮文案
启动项卡片改为列表行布局，内联展示自定义命令输入区域

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -244,10 +244,10 @@
     "step_startup_title": "Step 3: Startup Settings",
     "step_startup_desc": "Name, Java, memory and port",
     "step_startup_panel_desc": "Configure server name, Java path, and startup settings.",
-    "step_config_title": "Step 3: Server Settings",
+    "step_config_title": "Step 4: Server Settings",
     "step_config_desc": "Name, memory, port and online mode",
-    "step_action_title": "Step 4: Execute",
-    "step_action_desc": "Create new or import existing",
+    "step_action_title": "Step 5: Create",
+    "step_action_desc": "Confirm settings and create server",
     "step_action_panel_desc": "Confirm settings and run create or import.",
     "source_drop_or_click": "Drop an archive or folder here, or click to choose",
     "source_accept_hint": "Supports .zip/.tar/.tar.gz/.tgz archives, or a server folder",
