--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -240,10 +240,10 @@
     "step_startup_title": "步骤 3：启动参数",
     "step_startup_desc": "名称、Java、内存与端口",
     "step_startup_panel_desc": "配置服务器名称、Java 路径与启动参数。",
-    "step_config_title": "步骤 3：服务器参数",
+    "step_config_title": "步骤 4：服务器参数",
     "step_config_desc": "名称、内存、端口与正版验证",
-    "step_action_title": "步骤 4：执行创建",
-    "step_action_desc": "创建新服或导入现有",
+    "step_action_title": "步骤 5：创建",
+    "step_action_desc": "确认参数后执行创建",
     "step_action_panel_desc": "确认参数后执行创建或导入。",
     "source_drop_or_click": "拖拽压缩包或文件夹到这里，或点击选择",
     "source_accept_hint": "支持 .zip/.tar/.tar.gz/.tgz 压缩包，或服务器文件夹",
