feat(create): 支持 Starter 启动与版本选择
扩展启动项扫描结果，返回核心类型与 MC 版本候选
导入流程新增 core_type 与 mc_version 参数并持久化
Starter 启动前请求安装器地址并拼接 --installer 参数
创建页新增服务端类型与 MC 版本下拉及校验提示

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -299,6 +299,14 @@
     "startup_custom_required": "Please enter a custom startup command",
     "startup_custom_redirect_forbidden": "Redirection and pipe operators are not allowed in custom command",
     "startup_custom_not_supported": "Current version validates and stores only; custom command execution is not enabled.",
+    "startup_core_type_label": "Server Core Type",
+    "startup_core_type_placeholder": "Select server core type",
+    "startup_core_type_detected": "Auto detected: {core}",
+    "startup_mc_version_label": "MC Version",
+    "startup_mc_version_placeholder": "Select MC version",
+    "startup_mc_version_detected": "Auto detected: {version}",
+    "startup_mc_version_detection_failed": "Auto detection failed, please select MC version manually.",
+    "startup_mc_version_required": "Starter mode requires selecting an MC version",
     "create_config_only": "Create Configuration Only",
     "copy_conflict_title": "File Conflicts Detected",
     "copy_conflict_description": "Files with the same name already exist in target path. Continue to overwrite.",
@@ -595,9 +603,6 @@
     "reset_title": "Confirm Restore Defaults",
     "browse_java": "Browse for java.exe",
     "browse_jar": "Browse for .jar file",
-    "java_download": "Auto Install Java",
-    "java_download_desc": "Download and configure JDK environment from Adoptium",
-    "java_download_btn": "One-click Install",
     "java_version_select": "Select Version",
     "java_installing": "Downloading...",
     "java_install_success": "Installation Complete: ",
@@ -756,7 +761,6 @@
     "no_plugins": "No Plugins Yet",
     "no_plugins_desc": "No plugins installed. Put plugin files in the plugin directory and click refresh.",
     "preset_theme": "Preset Themes",
-    "settings": "Settings",
     "related_plugins": "Related Plugins",
     "related_plugins_desc": "The following plugins depend on {{name}}",
     "reset_default": "Reset to Default",
