--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -295,6 +295,14 @@
     "startup_custom_required": "请输入自定义启动命令",
     "startup_custom_redirect_forbidden": "自定义命令禁止使用重定向或管道符",
     "startup_custom_not_supported": "当前版本仅校验并保存，不会执行自定义命令。",
+    "startup_core_type_label": "服务端类型",
+    "startup_core_type_placeholder": "请选择服务端类型",
+    "startup_core_type_detected": "自动识别：{core}",
+    "startup_mc_version_label": "MC 版本",
+    "startup_mc_version_placeholder": "请选择 MC 版本",
+    "startup_mc_version_detected": "自动识别：{version}",
+    "startup_mc_version_detection_failed": "自动识别失败，请手动选择 MC 版本。",
+    "startup_mc_version_required": "Starter 启动需要手动选择 MC 版本",
     "create_config_only": "仅创建服务器配置",
     "copy_conflict_title": "检测到文件冲突",
     "copy_conflict_description": "目标目录存在同名文件，继续将覆盖这些文件。",
@@ -719,7 +727,6 @@
     "no_plugins": "暂无插件",
     "no_plugins_desc": "还没有安装任何插件。将插件文件放入插件目录后点击刷新。",
     "preset_theme": "预设主题",
-    "settings": "设置",
     "related_plugins": "关联插件",
     "related_plugins_desc": "以下插件依赖 {{name}}",
     "reset_default": "重置为默认",
