fix(create): 禁止开服路径嵌套源目录
后端新增子路径判断，阻止目录复制出现递归套娃
复制目录时跳过目标目录本身，增加兜底保护逻辑
前端新增路径校验与提示文案，选择时即时拦截

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -271,6 +271,7 @@
     "path_label": "Server Path",
     "path_required_archive": "Archive source requires a target server path.",
     "path_optional_folder": "Folder source can run in place or use a new target path.",
+    "path_child_of_source_forbidden": "Server path cannot be a subdirectory of the source folder.",
     "path_archive_placeholder": "Choose the target path for archive import",
     "path_folder_placeholder": "Leave empty to run in place",
     "path_use_in_place": "Run In Place",
