Refactor:重构原有的下载
- 修复了侧边栏"download-file"的i18n问题

检查：
npm run tauri dev ✅通过
npm run tauri build ✅通过
cargo fmt --all -- --check ✅通过
cargo clippy --workspace -- -D warnings ✅通过
相关测试函数 ✅通过

Co-Authored-By: 皓天是条龙 <zhu1h1t1@163.com>

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -22,6 +22,7 @@
     "settings": "Settings",
     "personalize": "Personalize",
     "about": "About",
+    "download-file": "Download File",
     "loading": "Loading...",
     "select_server": "Select Server",
     "open_folder": "Open Folder",
