--- a/src/language/es-ES.json
+++ b/src/language/es-ES.json
@@ -22,6 +22,7 @@
     "settings": "Ajustes",
     "personalize": "Personalizar",
     "about": "Acerca de",
+    "download-file": "Descargar archivo",
     "loading": "Cargando...",
     "select_server": "Seleccionar servidor",
     "open_folder": "Abrir carpeta",
