--- a/src/language/fr-FA.json
+++ b/src/language/fr-FA.json
@@ -22,6 +22,7 @@
     "settings": "Paramètres",
     "personalize": "Personnaliser",
     "about": "À propos",
+    "download-file": "Télécharger le fichier",
     "loading": "Chargement...",
     "select_server": "Sélectionner un serveur",
     "open_folder": "Ouvrir le dossier",
