--- a/src/language/vi-VN.json
+++ b/src/language/vi-VN.json
@@ -22,6 +22,7 @@
     "settings": "Cài đặt",
     "personalize": "Cá nhân hóa",
     "about": "Giới thiệu",
+    "download-file": "Tải tập tin",
     "loading": "Đang tải...",
     "select_server": "Chọn máy chủ",
     "open_folder": "Mở thư mục",
