--- a/src/language/zh-TW.json
+++ b/src/language/zh-TW.json
@@ -22,6 +22,7 @@
     "settings": "設定",
     "personalize": "個人化",
     "about": "關於",
+    "download-file": "檔案下載",
     "loading": "載入中...",
     "select_server": "選擇伺服器",
     "open_folder": "開啟資料夾",
