--- a/src/language/de-DE.json
+++ b/src/language/de-DE.json
@@ -22,6 +22,7 @@
     "settings": "Einstellungen",
     "personalize": "Personalisieren",
     "about": "Über",
+    "download-file": "Datei herunterladen",
     "loading": "Laden...",
     "select_server": "Server auswählen",
     "open_folder": "Ordner öffnen",
