--- a/src/language/ja-JP.json
+++ b/src/language/ja-JP.json
@@ -22,6 +22,7 @@
     "settings": "設定",
     "personalize": "パーソナライズ",
     "about": "このソフトについて",
+    "download-file": "ファイルをダウンロード",
     "loading": "読み込み中...",
     "select_server": "サーバーを選択",
     "open_folder": "フォルダを開く",
