--- a/src/language/ko-KR.json
+++ b/src/language/ko-KR.json
@@ -22,6 +22,7 @@
     "settings": "설정",
     "personalize": "개인 설정",
     "about": "정보",
+    "download-file": "파일 다운로드",
     "loading": "로딩 중...",
     "select_server": "서버 선택",
     "open_folder": "폴더 열기",
