--- a/src/language/ru-RU.json
+++ b/src/language/ru-RU.json
@@ -22,6 +22,7 @@
     "settings": "Настройки",
     "personalize": "Персонализация",
     "about": "О программе",
+    "download-file": "Скачать файл",
     "loading": "Загрузка...",
     "select_server": "Выбрать сервер",
     "open_folder": "Открыть папку",
