docs: 更新`提交前测试必读！！！.md`
close #427

--- a/提交前测试必读！！！.md
+++ b/提交前测试必读！！！.md
@@ -59,7 +59,7 @@
 2. 检查界面是否完整加载
 3. 测试窗口操作功能
 
-### 步骤 2：核心功能验证
+### 步骤 2：功能验证
 
 1. **创建测试服务器**：
    - 名称：Test Server
@@ -128,7 +128,7 @@
 
 ```bash
 # 开发模式
-npm run tauri dev
+pnpm run tauri dev
 
 # release模式
 ./src-tauri/target/release/sea-lantern.exe
