Refactor:重构原有的下载 (#415)
* Refactor:重构原有的下载

- 更新了多线程下载器

检查：
npm run tauri dev ✅通过
npm run tauri build ✅通过
cargo fmt --all -- --check ✅通过
cargo clippy --workspace -- -D warnings ✅通过
相关测试函数 ✅通过

Co-Authored-By: 皓天是条龙 <zhu1h1t1@163.com>

* Refactor:重构原有的下载

- 更新了下载管理器和相关api

检查：
npm run tauri dev ✅通过
npm run tauri build ✅通过
cargo fmt --all -- --check ✅通过
cargo clippy --workspace -- -D warnings ✅通过
相关测试函数 ✅通过

Co-Authored-By: 皓天是条龙 <zhu1h1t1@163.com>

* Refactor:重构原有的下载

- 更新了后端依赖

检查：
npm run tauri dev ✅通过
npm run tauri build ✅通过
cargo fmt --all -- --check ✅通过
cargo clippy --workspace -- -D warnings ✅通过
相关测试函数 ✅通过

Co-Authored-By: 皓天是条龙 <zhu1h1t1@163.com>

* Refactor:重构原有的下载

- 更新了DownloadFileView.vue
- 更新了downloader.ts -> 实现了前端api
- 更新了system.rs和system.ts -> 增加了保存文件的api

检查：
npm run tauri dev ✅通过
npm run tauri build ✅通过
cargo fmt --all -- --check ✅通过
cargo clippy --workspace -- -D warnings ✅通过
相关测试函数 ✅通过

Co-Authored-By: 皓天是条龙 <zhu1h1t1@163.com>

* Refactor:重构原有的下载

- 添加下载页的路径并添加到侧边栏

检查：
npm run tauri dev ✅通过
npm run tauri build ✅通过
cargo fmt --all -- --check ✅通过
cargo clippy --workspace -- -D warnings ✅通过
相关测试函数 ✅通过

Co-Authored-By: 皓天是条龙 <zhu1h1t1@163.com>

* Refactor:重构原有的下载

- 实现了下载页面的相关i18n

检查：
npm run tauri dev ✅通过
npm run tauri build ✅通过
cargo fmt --all -- --check ✅通过
cargo clippy --workspace -- -D warnings ✅通过
相关测试函数 ✅通过

Co-Authored-By: 皓天是条龙 <zhu1h1t1@163.com>

* Refactor:重构原有的下载

- 修复了侧边栏"download-file"的i18n问题

检查：
npm run tauri dev ✅通过
npm run tauri build ✅通过
cargo fmt --all -- --check ✅通过
cargo clippy --workspace -- -D warnings ✅通过
相关测试函数 ✅通过

Co-Authored-By: 皓天是条龙 <zhu1h1t1@163.com>

* Refactor:重构原有的下载

- 采用了别名导入

检查：
npm run tauri dev ✅通过
npm run tauri build ✅通过
cargo fmt --all -- --check ✅通过
cargo clippy --workspace -- -D warnings ✅通过
相关测试函数 ✅通过

Co-Authored-By: 皓天是条龙 <zhu1h1t1@163.com>

* Refactor:重构原有的下载

- 增加了线程数的合法性检测

检查：
npm run tauri dev ✅通过
npm run tauri build ✅通过
cargo fmt --all -- --check ✅通过
cargo clippy --workspace -- -D warnings ✅通过
相关测

--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -22,6 +22,7 @@
     "settings": "设置",
     "personalize": "个性化",
     "about": "关于",
+    "download-file": "文件下载",
     "loading": "加载中...",
     "select_server": "选择服务器",
     "open_folder": "打开文件夹",
@@ -357,10 +358,8 @@
     "delete": "删除",
     "refresh_list": "刷新列表",
     "reload_plugins": "重载插件",
-    "reload_plugins_warning": "重载插件可能导致服务器异常，部分插件可能不支持",
     "empty_config_folder": "配置文件夹为空",
     "no_config_files": "无配置",
-    "has_config_folder": "有配置",
     "config_files_count": "个配置",
     "config_files": "配置文件",
     "open": "打开",
@@ -936,5 +935,19 @@
       "inProgress": "Log Demo 插件正在禁用...",
       "complete": "Log Demo 插件已禁用"
     }
+  },
+  "download-file": {
+    "title": "使用多线程下载器下载文件",
+    "url": "下载地址",
+    "save_folder": "保存到",
+    "filename": "文件名",
+    "thread_count": "线程数",
+    "cancel": "取消",
+    "download": "下载",
+    "browse": "浏览",
+    "downloading": "正在下载资源...",
+    "status-finished": "下载已完成",
+    "failed": "下载失败",
+    "completed": "已完成"
   }
 }
