--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -22,6 +22,7 @@
     "settings": "Settings",
     "personalize": "Personalize",
     "about": "About",
+    "download-file": "Download File",
     "loading": "Loading...",
     "select_server": "Select Server",
     "open_folder": "Open Folder",
@@ -360,10 +361,8 @@
     "delete": "Delete",
     "refresh_list": "Refresh List",
     "reload_plugins": "Reload Plugins",
-    "reload_plugins_warning": "Reloading plugins may cause server issues, some plugins may not support it",
     "empty_config_folder": "Config folder is empty",
     "no_config_files": "No config",
-    "has_config_folder": "Has config",
     "config_files_count": "configs",
     "config_files": "Config Files",
     "open": "Open",
@@ -783,7 +782,6 @@
       "delete": "Delete Plugin"
     },
     "update_available": "Update available",
-    "settings": "Plugin Settings",
     "settings_title": "{{name}} Settings",
     "permissions": "Permissions",
     "dependencies": "Dependencies",
@@ -970,5 +968,19 @@
       "inProgress": "Log Demo plugin is being disabled...",
       "complete": "Log Demo plugin disabled"
     }
+  },
+  "download-file": {
+    "title": "Download File Using Multi-threaded Downloader",
+    "url": "Download URL",
+    "save_folder": "Save to",
+    "filename": "File Name",
+    "thread_count": "Thread Count",
+    "cancel": "Cancel",
+    "download": "Download",
+    "browse": "Browse",
+    "downloading": "Downloading resource...",
+    "status-finished": "Download Finished",
+    "failed": "Download Failed",
+    "completed": "Completed"
   }
 }
