feat(server): 支持直接选择JAR文件作为服务器源并优化路径处理
移除 use_software_data_dir 选项，改为在用户指定路径下创建服务器名称子目录
添加 last_run_path 设置项保存上次选择的开服路径
更新界面文本和文件选择器以支持JAR文件
优化服务器创建时的路径处理逻辑

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -250,16 +250,16 @@
     "step_action_title": "Step 5: Create",
     "step_action_desc": "Confirm settings and create server",
     "step_action_panel_desc": "Confirm settings and run create or import.",
-    "source_drop_or_click": "Drop an archive or folder here, or click to choose",
-    "source_accept_hint": "Supports .zip/.tar/.tar.gz/.tgz archives, or a server folder",
+    "source_drop_or_click": "Drop a file or folder here, or click to choose",
+    "source_accept_hint_file": "Supports .jar, .zip, .tar, .tar.gz, .tgz files, or a server folder",
     "source_selected_title": "Source Selected",
-    "source_kind_archive": "Archive",
+    "source_kind_file": "File",
     "source_kind_folder": "Folder",
     "source_not_selected": "Not selected",
     "source_clear": "Clear",
     "source_choose_title": "Select Server Source",
-    "source_choose_description": "Choose a modpack archive file or an existing server folder.",
-    "source_pick_archive": "Choose Archive",
+    "source_choose_description_file": "Choose a server JAR file, modpack archive, or an existing server folder.",
+    "source_pick_file": "Choose File",
     "source_pick_folder": "Choose Folder",
     "source_drop_unavailable": "Cannot read dropped item path. Please click the receiver to select manually.",
     "source_required": "Please select a modpack archive or server folder first",
@@ -268,18 +268,14 @@
     "source_core_label": "Server core type: ",
     "source_core_unknown": "Unknown",
     "step_path_title": "Step 2: Server Path",
-    "step_path_desc": "Set run directory (required for archives)",
+    "step_path_desc": "Set run directory",
     "path_label": "Server Path",
-    "path_required_archive": "Archive source requires a target server path.",
-    "path_optional_folder": "Folder source can run in place or use a new target path.",
+    "path_required_hint": "Please select a server run directory.",
     "path_child_of_source_forbidden": "Server path cannot be a subdirectory of the source folder.",
-    "path_archive_placeholder": "Choose the target path for archive import",
-    "path_folder_placeholder": "Leave empty to run in place",
-    "path_use_in_place": "Run In Place",
-    "path_use_source": "Use Source Path",
+    "path_custom_placeholder": "Choose the server directory",
     "path_effective_label": "Effective server path:",
     "path_overwrite_warning": "Files with the same name already exist in server path and will be overwritten.",
-    "path_required_folder_target": "Cannot resolve target server path for folder source",
+    "path_required": "Please select a server path",
     "startup_title": "Startup Selection",
     "startup_hint": "Recommended: starter > bat/sh/ps1 > server.jar",
     "startup_scanning": "Scanning startup candidates...",
