--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -246,16 +246,16 @@
     "step_action_title": "步骤 5：创建",
     "step_action_desc": "确认参数后执行创建",
     "step_action_panel_desc": "确认参数后执行创建或导入。",
-    "source_drop_or_click": "拖拽压缩包或文件夹到这里，或点击选择",
-    "source_accept_hint": "支持 .zip/.tar/.tar.gz/.tgz 压缩包，或服务器文件夹",
+    "source_drop_or_click": "拖拽文件或文件夹到这里，或点击选择",
+    "source_accept_hint_file": "支持 .jar、.zip、.tar、.tar.gz、.tgz 文件或服务器文件夹",
     "source_selected_title": "已选择来源",
-    "source_kind_archive": "压缩包",
+    "source_kind_file": "文件",
     "source_kind_folder": "文件夹",
     "source_not_selected": "未选择",
     "source_clear": "清除",
     "source_choose_title": "选择服务器来源",
-    "source_choose_description": "请选择导入整合包压缩文件，或选择现有服务器文件夹。",
-    "source_pick_archive": "选择压缩包",
+    "source_choose_description_file": "请选择服务端 JAR 文件、整合包压缩文件，或选择现有服务器文件夹。",
+    "source_pick_file": "选择文件",
     "source_pick_folder": "选择文件夹",
     "source_drop_unavailable": "无法读取拖入项路径，请点击接收区手动选择",
     "source_required": "请先选择整合包压缩文件或服务器文件夹",
@@ -264,18 +264,14 @@
     "source_core_label": "服务端类型：",
     "source_core_unknown": "未知",
     "step_path_title": "步骤 2：开服路径",
-    "step_path_desc": "设置开服目录（压缩包必填）",
+    "step_path_desc": "设置开服目录",
     "path_label": "开服路径",
-    "path_required_archive": "压缩包来源必须指定开服路径。",
-    "path_optional_folder": "文件夹来源可原地开服，也可指定新路径。",
+    "path_required_hint": "请选择服务器运行目录。",
     "path_child_of_source_forbidden": "开服路径不能是源文件夹路径的子目录。",
-    "path_archive_placeholder": "请选择压缩包的开服目录",
-    "path_folder_placeholder": "留空表示原地开服",
-    "path_use_in_place": "原地开服",
-    "path_use_source": "使用源路径",
+    "path_custom_placeholder": "请选择开服目录",
     "path_effective_label": "实际开服目录：",
     "path_overwrite_warning": "开服路径下有同名文件，会被覆盖",
-    "path_required_folder_target": "无法确定文件夹开服目录，请重新选择路径",
+    "path_required": "请选择开服路径",
     "startup_title": "启动项选择",
     "startup_hint": "推荐顺序：starter > bat/sh/ps1 > server.jar",
     "startup_scanning": "正在扫描启动项...",
