Feat:添加在添加服务器页面下载服务器核心的功能

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -222,6 +222,8 @@
     "online_mode": "Online Mode",
     "online_mode_on": "Enabled",
     "online_mode_off": "Disabled",
+    "prev_step": "Previous",
+    "next_step": "Next",
     "cancel": "Cancel",
     "scanning": "Scanning all disks...",
     "no_java": "No Java detected, please click the button below to scan",
@@ -250,7 +252,7 @@
     "step_action_title": "Step 5: Create",
     "step_action_desc": "Confirm settings and create server",
     "step_action_panel_desc": "Confirm settings and run create or import.",
-    "source_drop_or_click": "Drop an archive or folder here, or click to choose",
+    "source_drop_or_click": "Method 1: Drop an archive or folder here, or click to choose",
     "source_accept_hint": "Supports .zip/.tar/.tar.gz/.tgz archives, or a server folder",
     "source_selected_title": "Source Selected",
     "source_kind_archive": "Archive",
@@ -261,6 +263,15 @@
     "source_choose_description": "Choose a modpack archive file or an existing server folder.",
     "source_pick_archive": "Choose Archive",
     "source_pick_folder": "Choose Folder",
+    "source_method_two_title": "Method 2: Download Server Core",
+    "source_method_two_target_path": "Target Path",
+    "source_method_two_pick_path": "Choose Folder",
+    "source_method_two_core_type": "Core Category",
+    "source_method_two_game_version": "Game Version",
+    "source_method_two_download": "Download",
+    "source_method_two_downloading": "Downloading...",
+    "source_method_two_done": "Download Completed",
+    "source_method_two_required": "Please select target path, core category, and game version first",
     "source_drop_unavailable": "Cannot read dropped item path. Please click the receiver to select manually.",
     "source_required": "Please select a modpack archive or server folder first",
     "import_requires_folder": "Select and Import only supports a server folder. Please choose a folder source.",
