--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -218,6 +218,8 @@
     "online_mode": "正版验证",
     "online_mode_on": "已开启",
     "online_mode_off": "已关闭",
+    "prev_step": "上一步",
+    "next_step": "下一步",
     "cancel": "取消",
     "scanning": "正在扫描所有磁盘...",
     "no_java": "未检测到 Java，请点击下方按钮扫描",
@@ -246,7 +248,7 @@
     "step_action_title": "步骤 5：创建",
     "step_action_desc": "确认参数后执行创建",
     "step_action_panel_desc": "确认参数后执行创建或导入。",
-    "source_drop_or_click": "拖拽压缩包或文件夹到这里，或点击选择",
+    "source_drop_or_click": "方式一：拖拽压缩包或文件夹到这里，或点击选择",
     "source_accept_hint": "支持 .zip/.tar/.tar.gz/.tgz 压缩包，或服务器文件夹",
     "source_selected_title": "已选择来源",
     "source_kind_archive": "压缩包",
@@ -257,6 +259,15 @@
     "source_choose_description": "请选择导入整合包压缩文件，或选择现有服务器文件夹。",
     "source_pick_archive": "选择压缩包",
     "source_pick_folder": "选择文件夹",
+    "source_method_two_title": "方式二：下载服务器核心",
+    "source_method_two_target_path": "目标路径",
+    "source_method_two_pick_path": "选择文件夹",
+    "source_method_two_core_type": "核心类别",
+    "source_method_two_game_version": "游戏版本",
+    "source_method_two_download": "下载",
+    "source_method_two_downloading": "正在下载...",
+    "source_method_two_done": "下载完成",
+    "source_method_two_required": "请先完成目标路径、核心类别和游戏版本选择",
     "source_drop_unavailable": "无法读取拖入项路径，请点击接收区手动选择",
     "source_required": "请先选择整合包压缩文件或服务器文件夹",
     "import_requires_folder": "选择并导入仅支持服务器文件夹，请重新选择来源",
