feat(服务器管理): 优化服务器文件夹命名并添加批量操作功能
- 将服务器文件夹名称从完整UUID改为前20位，保持唯一性同时更简洁
- 添加批量操作相关多语言支持
- 改进服务器状态判断逻辑，增加"Starting"状态处理
- 补充缺失的英文翻译"Delete Server"

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -130,6 +130,7 @@
     "stop": "Stop",
     "edit": "Edit",
     "delete": "Delete",
+    "delete_server": "Delete Server",
     "status": "Status",
     "running": "Running",
     "stopped": "Stopped",
@@ -833,6 +834,23 @@
       "required": "Missing required dependencies: {{names}}",
       "optional": "Missing optional dependencies: {{names}}"
     },
+    "batch_mode": "Batch Select",
+    "select_all": "Select All",
+    "deselect_all": "Deselect All",
+    "invert_selection": "Invert",
+    "selected_count": "{{count}} plugins selected",
+    "batch_delete": "Batch Delete",
+    "confirm_batch_delete": "Confirm Batch Delete",
+    "confirm_batch_delete_message": "Are you sure you want to delete the selected {{count}} plugins?",
+    "delete_with_data": "Delete (with data)",
+    "delete_without_data": "Delete (keep data)",
+    "ok": "OK",
+    "missing_deps_title": "Missing Dependencies",
+    "missing_deps_intro": "Plugin {{name}} requires the following dependencies:",
+    "missing_deps_hint": "Make sure all required dependencies are installed and enabled, otherwise the plugin may not work properly.",
+    "later": "Later",
+    "go_market": "Go to Market",
+    "already_latest": "Already the latest version",
     "permission": {
       "network": "Network Access",
       "network_desc": "Allows the plugin to send HTTP requests and access external networks. Malicious plugins may exploit this to exfiltrate data.",
