docs(语言文件): 更新en-US.json中的翻译文本
添加了多个新的翻译文本，包括插件重载警告、配置文件夹状态等提示信息

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -359,13 +359,16 @@
     "delete": "Delete",
     "refresh_list": "Refresh List",
     "reload_plugins": "Reload Plugins",
+    "reload_plugins_warning": "Reload plugins may cause server lag",
     "empty_config_folder": "Config folder is empty",
     "no_config_files": "No config",
     "config_files_count": "configs",
+    "has_config_folder": "Has config folder",
     "config_files": "Config Files",
     "open": "Open",
     "confirm_delete_plugin": "Are you sure you want to delete plugin {name}?",
     "not_jar_file": "{file} is not a jar file, cannot enable/disable",
+    "default": "Default",
     "categories": {
       "all": "All",
       "network": "Network",
