refactor(组件): 将服务器选择器提取为独立组件并优化交互
feat(多语言): 添加重载插件警告和配置文件夹状态提示

--- a/src/language/en-US.json
+++ b/src/language/en-US.json
@@ -130,7 +130,6 @@
     "stop": "Stop",
     "edit": "Edit",
     "delete": "Delete",
-    "delete_server": "Delete Server",
     "status": "Status",
     "running": "Running",
     "stopped": "Stopped",
@@ -359,16 +358,15 @@
     "delete": "Delete",
     "refresh_list": "Refresh List",
     "reload_plugins": "Reload Plugins",
-    "reload_plugins_warning": "Reload plugins may cause server lag",
+    "reload_plugins_warning": "Reloading plugins may cause server lag, please proceed with caution",
     "empty_config_folder": "Config folder is empty",
+    "has_config_folder": "Has Config",
     "no_config_files": "No config",
     "config_files_count": "configs",
-    "has_config_folder": "Has config folder",
     "config_files": "Config Files",
     "open": "Open",
     "confirm_delete_plugin": "Are you sure you want to delete plugin {name}?",
     "not_jar_file": "{file} is not a jar file, cannot enable/disable",
-    "default": "Default",
     "categories": {
       "all": "All",
       "network": "Network",
@@ -837,23 +835,6 @@
       "required": "Missing required dependencies: {{names}}",
       "optional": "Missing optional dependencies: {{names}}"
     },
-    "batch_mode": "Batch Select",
-    "select_all": "Select All",
-    "deselect_all": "Deselect All",
-    "invert_selection": "Invert",
-    "selected_count": "{{count}} plugins selected",
-    "batch_delete": "Batch Delete",
-    "confirm_batch_delete": "Confirm Batch Delete",
-    "confirm_batch_delete_message": "Are you sure you want to delete the selected {{count}} plugins?",
-    "delete_with_data": "Delete (with data)",
-    "delete_without_data": "Delete (keep data)",
-    "ok": "OK",
-    "missing_deps_title": "Missing Dependencies",
-    "missing_deps_intro": "Plugin {{name}} requires the following dependencies:",
-    "missing_deps_hint": "Make sure all required dependencies are installed and enabled, otherwise the plugin may not work properly.",
-    "later": "Later",
-    "go_market": "Go to Market",
-    "already_latest": "Already the latest version",
     "permission": {
       "network": "Network Access",
       "network_desc": "Allows the plugin to send HTTP requests and access external networks. Malicious plugins may exploit this to exfiltrate data.",
