--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -355,7 +355,9 @@
     "delete": "删除",
     "refresh_list": "刷新列表",
     "reload_plugins": "重载插件",
+    "reload_plugins_warning": "重载插件可能会导致服务器卡顿，请谨慎操作",
     "empty_config_folder": "配置文件夹为空",
+    "has_config_folder": "配置",
     "no_config_files": "无配置",
     "config_files_count": "个配置",
     "config_files": "配置文件",
@@ -800,23 +802,6 @@
       "required": "缺少必须依赖: {{names}}",
       "optional": "缺少可选依赖: {{names}}"
     },
-    "batch_mode": "批量选择",
-    "select_all": "全选",
-    "deselect_all": "全不选",
-    "invert_selection": "反选",
-    "selected_count": "已选择 {{count}} 个插件",
-    "batch_delete": "批量删除",
-    "confirm_batch_delete": "确认批量删除",
-    "confirm_batch_delete_message": "确定要删除选中的 {{count}} 个插件吗？",
-    "delete_with_data": "删除（含数据）",
-    "delete_without_data": "删除（保留数据）",
-    "ok": "确定",
-    "missing_deps_title": "缺失依赖",
-    "missing_deps_intro": "插件 {{name}} 需要以下依赖：",
-    "missing_deps_hint": "请确保所有必须依赖已安装并启用，否则插件无法正常工作。",
-    "later": "稍后处理",
-    "go_market": "前往市场",
-    "already_latest": "已是最新版本",
     "permission": {
       "network": "网络访问",
       "network_desc": "允许插件发送 HTTP 请求，访问外部网络。恶意插件可能利用此权限外泄数据。",
