--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -615,7 +615,9 @@
     "developer_mode": "开发者模式",
     "developer_mode_desc": "启动高级功能和调试选项",
     "developer_mode_toggle": "启动开发者模式",
-    "developer_mode_toggle_desc": "启用后将允许使用调试工具"
+    "developer_mode_toggle_desc": "启用后将允许使用调试工具",
+    "minimal_mode": "极简模式",
+    "minimal_mode_desc": "关闭所有动效和特效，只保留最基本的渲染和互动"
   },
   "about": {
     "title": "关于",
