--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -964,6 +964,10 @@
     "status-finished": "下载已完成",
     "failed": "下载失败",
     "completed": "已完成",
-    "invalid_input": "请检查下载地址、保存路径和文件名"
+    "invalid_input": "请检查下载地址、保存路径和文件名",
+    "url_invalid": "下载地址无效，请输入 http(s) 链接",
+    "save_folder_required": "请选择保存路径",
+    "filename_required": "请输入文件名",
+    "filename_invalid": "文件名不能包含路径分隔符（/ 或 \\）"
   }
 }
