--- a/src/language/zh-CN.json
+++ b/src/language/zh-CN.json
@@ -968,6 +968,9 @@
     "url_invalid": "下载地址无效，请输入 http(s) 链接",
     "save_folder_required": "请选择保存路径",
     "filename_required": "请输入文件名",
-    "filename_invalid": "文件名不能包含路径分隔符（/ 或 \\）"
+    "filename_invalid": "文件名不能包含路径分隔符（/ 或 \\）",
+    "thread_count_required": "线程数不能为空",
+    "thread_count_invalid_chars": "线程数只能包含数字",
+    "thread_count_positive_integer": "线程数必须是一个正整数"
   }
 }
